# esxi

./: .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  AGENT_14_COMPLETION_REPORT.md  BUILD_AGENT_COMPLETION_REPORT.md  BUILD_AGENT_v0.4_COMPLETION_REPORT.md  BUILD_ERROR_AGENT_SUMMARY_v0.4.md  BUILD_ERROR_FIXES_REPORT.md  BUILD_INFRASTRUCTURE.md  BUILD_LOG.md  BUILD_LOG_v0.4.md  BUILD_STATUS.md  BUILD_STATUS_v0.4.md  Cargo.toml  Dockerfile  ERROR_AGENT_QUICKREF_v0.4.md  ERROR_FIXES.md  ERROR_FIXES_v0.4.md  ERROR_HANDLING_PROCESS_v0.4.md  ERROR_LOG.md  ERROR_LOG_v0.4.md  INTEGRATION_AGENT_SUMMARY.md  INTEGRATION_REPORT.md  INTEGRATION_REPORT_v0.4.md  README.md  SCRATCHPAD.md  SCRATCHPAD_v0.2.5.md  SCRATCHPAD_v0.5.md  VERSION_0.5_RELEASE_NOTES.md  WARNING_AGENT_SUMMARY.md  WARNING_FIXES.md  WARNING_FIXES_v0.4.md  WARNING_LOG.md  WARNING_LOG_v0.4.md  WARNING_PROCESS_v0.4.md  docker-compose.yml  package.json  (+2 more)
crates/accessibility-core/: Cargo.toml
crates/accessibility-core/src/: error.rs  lib.rs  severity.rs  types.rs  wcag.rs
crates/accessibility-core/ts/: package.json
crates/accessibility-realtime/: Cargo.toml
crates/accessibility-realtime/src/: alerts.rs  events.rs  lib.rs  metrics.rs  monitor.rs  scheduler.rs  types.rs  websocket.rs
crates/accessibility-realtime/ts/: package.json  tsconfig.json
crates/accessibility-scanner/: Cargo.toml
crates/accessibility-scanner/assets/: report.css
crates/accessibility-scanner/src/: analysis.rs  lib.rs  report.rs  scanner.rs  types.rs
crates/accessibility-scanner/ts/: package.json  tsconfig.json
crates/meridian-3d/: Cargo.toml
crates/meridian-3d/src/: error.rs  lib.rs
crates/meridian-analysis/: Cargo.toml
crates/meridian-analysis/benches/: analysis_benchmarks.rs
crates/meridian-analysis/src/: buffer.rs  error.rs  lib.rs  network.rs  overlay.rs  proximity.rs  statistics.rs  surface.rs  transform.rs  validation.rs
crates/meridian-auth/: Cargo.toml
crates/meridian-auth/src/: audit.rs  error.rs  jwt.rs  lib.rs  oauth.rs  password.rs  session.rs  user.rs
crates/meridian-backup/: Cargo.toml  README.md
crates/meridian-backup/src/: backup.rs  compression.rs  encryption.rs  error.rs  failover.rs  incremental.rs  lib.rs  pitr.rs  replication.rs  retention.rs  rto.rs  runbook.rs  scheduler.rs  verification.rs
crates/meridian-cache/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md
crates/meridian-cache/src/: compression.rs  error.rs  invalidation.rs  lib.rs  stats.rs  tiered.rs  tile.rs  warmup.rs
crates/meridian-cad/: Cargo.toml  README.md
crates/meridian-cad/src/: canvas.rs  constraints.rs  export.rs  lib.rs  precision.rs  primitives.rs  snapping.rs  solver.rs  tools.rs  undo.rs
crates/meridian-cli/: Cargo.toml
crates/meridian-cli/src/: main.rs
crates/meridian-collaboration/: Cargo.toml
crates/meridian-collaboration/src/: conflict.rs  history.rs  lib.rs  presence.rs  session.rs  sync.rs
crates/meridian-compression/: Cargo.toml
crates/meridian-compression/src/: adaptive.rs  brotli.rs  delta.rs  dictionary.rs  error.rs  gzip.rs  lib.rs  lz4.rs  pipeline.rs  snappy.rs  stats.rs  streaming.rs  zstd.rs
crates/meridian-core/: Cargo.toml
crates/meridian-core/src/: bbox.rs  error.rs  feature.rs  layer.rs  lib.rs  spatial_index.rs  traits.rs
crates/meridian-crypto/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/meridian-crypto/src/: audit.rs  certificate.rs  derivation.rs  envelope.rs  error.rs  field.rs  hsm.rs  lib.rs  rotation.rs  signature.rs  transport.rs  zkp.rs
crates/meridian-dashboard/: Cargo.toml
crates/meridian-dashboard/src/: error.rs  lib.rs
crates/meridian-dashboard/ts/: package.json
crates/meridian-data-pipeline/: Cargo.toml
crates/meridian-data-pipeline/src/: error.rs  lib.rs
crates/meridian-db/: Cargo.toml
crates/meridian-db/src/: error.rs  lib.rs  migrations.rs  models.rs  pool.rs  repository.rs  transaction.rs
crates/meridian-events/: Cargo.toml
crates/meridian-events/src/: aggregate.rs  archival.rs  bus.rs  causation.rs  command.rs  error.rs  event.rs  idempotency.rs  lib.rs  projection.rs  replay.rs  saga.rs  snapshot.rs  store.rs
crates/meridian-gateway/: Cargo.toml
crates/meridian-gateway/src/: lib.rs
crates/meridian-governance/: Cargo.toml
crates/meridian-governance/src/: audit.rs  catalog.rs  classification.rs  compliance.rs  error.rs  glossary.rs  impact.rs  lib.rs  lineage.rs  masking.rs  quality.rs  retention.rs  schema.rs  stewardship.rs
crates/meridian-imagery/: Cargo.toml
crates/meridian-imagery/src/: error.rs  lib.rs
crates/meridian-io/: Cargo.toml
crates/meridian-io/src/: csv.rs  detection.rs  error.rs  geojson.rs  geotiff.rs  gpkg.rs  kml.rs  lib.rs  shapefile.rs  traits.rs  wkt.rs
crates/meridian-map-engine/: Cargo.toml
crates/meridian-map-engine/src/: error.rs  lib.rs
crates/meridian-metrics/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/meridian-metrics/benches/: metrics_benchmark.rs
crates/meridian-metrics/examples/: basic_metrics.rs  complete_system.rs  gis_metrics.rs  sla_monitoring.rs
crates/meridian-metrics/src/: aggregator.rs  collector.rs  error.rs  exporter.rs  health.rs  lib.rs  profiler.rs  sla.rs  streaming.rs  types.rs
crates/meridian-metrics/tests/: integration_test.rs
crates/meridian-ml/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/meridian-ml-pipeline/: Cargo.toml
crates/meridian-ml-pipeline/src/: error.rs  lib.rs
crates/meridian-ml/src/: error.rs  lib.rs
crates/meridian-plugin/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/meridian-plugin/src/: config.rs  dependency.rs  error.rs  hooks.rs  hotreload.rs  ipc.rs  isolation.rs  lib.rs  lifecycle.rs  loader.rs  marketplace.rs  signing.rs  traits.rs  versioning.rs  wasm.rs
crates/meridian-query-optimizer/: Cargo.toml  README.md
crates/meridian-query-optimizer/src/: ast.rs  cache.rs  cost.rs  executor.rs  explain.rs  index.rs  join.rs  lib.rs  parallel.rs  parser.rs  plan.rs  rules.rs  statistics.rs
crates/meridian-realtime/: Cargo.toml
docker/: .env.example  Dockerfile  (+3 more)
(+1192 files in other folders)
