[workspace]
resolver = "2"
members = [
    # Core Platform Crates (v0.1.0)
    "crates/meridian-core",
    "crates/meridian-db",
    "crates/meridian-server",
    "crates/meridian-render",
    "crates/meridian-analysis",
    "crates/meridian-auth",
    "crates/meridian-io",
    "crates/meridian-cli",
    "crates/meridian-sdk",
    "crates/meridian-stream",

    # Enterprise Features (v0.1.5)
    "crates/meridian-metrics",
    "crates/meridian-cache",
    "crates/meridian-workflow",
    "crates/meridian-tenant",
    "crates/meridian-governance",
    "crates/meridian-search",
    "crates/meridian-plugin",
    "crates/meridian-events",
    "crates/meridian-crypto",
    "crates/meridian-backup",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/meridian-gis/meridian"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
