[workspace]
resolver = "2"
members = [
    # Core Platform Crates (v0.1.0)
    "crates/meridian-core",
    "crates/meridian-db",
    "crates/meridian-server",
    "crates/meridian-render",
    "crates/meridian-analysis",
    "crates/meridian-auth",
    "crates/meridian-io",
    "crates/meridian-cli",
    "crates/meridian-sdk",
    "crates/meridian-stream",

    # Enterprise Features (v0.1.5)
    "crates/meridian-metrics",
    "crates/meridian-cache",
    "crates/meridian-workflow",
    "crates/meridian-tenant",
    "crates/meridian-governance",
    "crates/meridian-search",
    "crates/meridian-plugin",
    "crates/meridian-events",
    "crates/meridian-crypto",
    "crates/meridian-backup",

    # Visualization & Frontend (v0.2.5)
    "crates/meridian-ui-components",
    "crates/meridian-map-engine",
    "crates/meridian-3d",
    "crates/meridian-vector-tiles",
    "crates/meridian-dashboard",

    # Data Processing & Intelligence (v0.2.5)
    "crates/meridian-data-pipeline",
    "crates/meridian-ml",
    "crates/meridian-imagery",

    # AI/ML Pipeline Engine (v0.5.0)
    "crates/meridian-ml-pipeline",

    # Collaboration & Networking (v0.2.5)
    "crates/meridian-realtime",
    "crates/meridian-routing",

    # Enterprise Collaboration Platform (v0.5.0)
    "crates/meridian-collaboration",

    # Enterprise API Gateway (v0.5.0)
    "crates/meridian-gateway",

    # Enterprise CAD Engine (v0.5.0)
    "crates/meridian-cad",

    # WASM Bridge (v0.5.0)
    "crates/meridian-wasm-bridge",

    # Advanced Compression Algorithms (v0.5.0)
    "crates/meridian-compression",

    # Database Query Optimizer (v0.5.0)
    "crates/meridian-query-optimizer",

    # Enterprise Security Module (v0.5.0)
    "crates/meridian-security",

    # Enterprise Web Accessibility SaaS (v0.3.0) - TypeScript only
    # Note: accessibility-* crates are now TypeScript packages in crates/*/ts/
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/meridian-gis/meridian"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
