[package]
name = "accessibility-core"
version = "0.3.0"
edition = "2021"
authors = ["HarborGrid <engineering@harborgrid.com>"]
description = "Core error handling and types for Enterprise Web-Accessibility SaaS Platform"
license = "MIT"
repository = "https://github.com/harborgrid/esxi"
keywords = ["accessibility", "wcag", "error-handling", "a11y", "enterprise"]
categories = ["accessibility", "web-programming", "development-tools"]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (optional)
tokio = { version = "1.35", features = ["full"], optional = true }

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"

[features]
default = ["async"]
async = ["tokio"]

[lib]
name = "accessibility_core"
path = "src/lib.rs"
