[package]
name = "meridian-3d"
version = "0.2.5"
edition = "2021"
authors = ["Meridian GIS Team"]
description = "3D terrain and building visualization for Meridian GIS Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harborgrid/meridian"
keywords = ["gis", "3d", "terrain", "visualization", "webgpu"]
categories = ["graphics", "visualization", "game-development"]

[dependencies]
# GPU rendering with WebGPU
wgpu = "0.19"
wgpu-core = "0.19"

# Math library for 3D graphics
glam = { version = "0.27", features = ["serde"] }

# glTF model loading
gltf = { version = "1.4", features = ["utils", "names"] }

# Physics engine for navigation
rapier3d = { version = "0.18", features = ["simd-stable", "serde-serialize"] }

# Image processing for textures
image = { version = "0.24", features = ["png", "jpeg", "tiff"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytemuck = { version = "1.14", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
parking_lot = "0.12"

# Geometry and mesh processing
spade = "2.7"  # Delaunay triangulation
meshopt = "0.1"  # Mesh optimization

# Video encoding
ffmpeg-next = { version = "6.1", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[features]
default = []  # video-export removed to avoid ffmpeg system dependency
video-export = ["ffmpeg-next"]
debug-rendering = []
profiling = []

[lib]
name = "meridian_3d"
path = "src/lib.rs"

# Benchmarks - uncomment when benches/terrain_rendering.rs is created
# [[bench]]
# name = "terrain_rendering"
# harness = false
