[package]
name = "meridian-auth"
version = "0.1.0"
edition = "2021"
authors = ["Meridian GIS Team"]
description = "Authentication and authorization system for Meridian GIS Platform"
license = "MIT"

[dependencies]
# JWT handling
jsonwebtoken = "9"

# Password hashing with Argon2id
argon2 = { version = "0.5", features = ["std"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Random number generation
rand = "0.8"

# Constant time comparison for security
subtle = "2.5"

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
