[package]
name = "meridian-backup"
version = "0.1.5"
edition = "2021"
authors = ["Meridian Team"]
description = "Enterprise disaster recovery and backup system for Meridian GIS Platform"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Cloud storage SDKs
aws-sdk-s3 = "1.13"
aws-config = "1.1"
google-cloud-storage = "0.15"
azure_storage = "0.17"
azure_storage_blobs = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
zstd = "0.13"
lz4 = "1.24"
flate2 = "1.0"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Additional dependencies
base64 = "0.22"
azure_core = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"

# Configuration
config = "0.13"
toml = "0.8"

# Metrics
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
criterion = "0.5"

[lib]
name = "meridian_backup"
path = "src/lib.rs"

