[package]
name = "meridian-cache"
version = "0.1.5"
edition = "2021"
authors = ["Meridian Team"]
description = "Enterprise distributed caching system for Meridian GIS Platform"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Redis support
redis = { version = "0.24", features = ["tokio-comp", "cluster", "cluster-async", "connection-manager"] }

# Caching algorithms
lru = "0.12"
parking_lot = "0.12"

# Compression
lz4 = "1.24"
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bytes = "1.5"
dashmap = "5.5"
arc-swap = "1.6"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
futures = "0.3"

# Metrics and monitoring
metrics = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
mockall = "0.12"
