[package]
name = "meridian-cli"
version = "0.1.0"
edition = "2021"
authors = ["Meridian GIS Team"]
description = "Command-line interface for Meridian GIS Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meridian-gis/meridian"
keywords = ["gis", "geospatial", "cli", "mapping"]
categories = ["command-line-utilities", "science::geo"]

[[bin]]
name = "meridian"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "color", "suggestions"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Progress indicators
indicatif = { version = "0.17", features = ["tokio"] }

# Terminal styling
console = "0.15"

# Interactive prompts
dialoguer = { version = "0.11", features = ["completion"] }

# Table formatting
tabled = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for SDK operations
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File I/O
tokio-util = { version = "0.7", features = ["io"] }

# Meridian dependencies
meridian-core = { path = "../meridian-core" }
meridian-db = { path = "../meridian-db" }
meridian-analysis = { path = "../meridian-analysis" }
meridian-io = { path = "../meridian-io" }
meridian-server = { path = "../meridian-server" }
meridian-sdk = { path = "../meridian-sdk" }

# Optional dependencies for specific formats
geojson = "0.24"
