[package]
name = "meridian-collaboration"
version = "0.5.0"
edition = "2021"
authors = ["Meridian Enterprise Team"]
description = "Enterprise Real-time Collaboration Engine with CRDTs and Operational Transform"
license = "Proprietary"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dashmap = "6.1"
tokio-tungstenite = "0.24"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "meridian_collaboration"
path = "src/lib.rs"
