[package]
name = "meridian-crypto"
version = "0.1.5"
edition = "2021"
authors = ["Meridian Team"]
description = "Enterprise-grade cryptographic services for the Meridian GIS Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meridian/meridian-gis"
keywords = ["cryptography", "encryption", "kms", "hsm", "gis"]
categories = ["cryptography", "authentication"]

[dependencies]
# Core cryptography
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"

# Key derivation
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
argon2 = "0.5"

# Digital signatures and certificates
x509-parser = "0.16"
rcgen = "0.12"
pem = "3.0"
rustls = "0.23"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# Encoding
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP clients for KMS
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# AWS SDK
aws-config = { version = "1.1", optional = true }
aws-sdk-kms = { version = "1.13", optional = true }

# HashiCorp Vault client
vaultrs = { version = "0.7", optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and auditing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"
getrandom = "0.2"

# Zero-knowledge proofs
bulletproofs = { version = "4.0", optional = true }
curve25519-dalek = { version = "4.1", optional = true }
merlin = { version = "3.0", optional = true }

# Homomorphic encryption (experimental)
# concrete = { version = "0.6", optional = true }

# Zeroize for secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[features]
default = []
aws-kms = ["aws-config", "aws-sdk-kms"]
vault = ["vaultrs"]
zkp = ["bulletproofs", "curve25519-dalek", "merlin"]
# homomorphic = ["concrete"]
hsm-support = []

