[package]
name = "meridian-data-pipeline"
version = "0.2.5"
edition = "2021"
authors = ["Meridian GIS Team"]
description = "Enterprise ETL and data processing pipeline for Meridian GIS Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harborgrid/meridian"
keywords = ["gis", "etl", "pipeline", "geospatial", "data-processing"]
categories = ["science::geo", "database", "asynchronous"]

[dependencies]
# Apache Arrow ecosystem for columnar data processing
arrow = "53.3.0"
parquet = "53.3.0"
datafusion = "43.0.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Parallel processing
rayon = "1.10"

# GIS and geometry processing
geo = "0.28"
geo-types = "0.7"
geojson = { version = "0.24", features = ["geo-types"] }
proj = { version = "0.28", optional = true }
wkt = "0.10"

# Database connectivity
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
diesel = { version = "2.2", features = ["postgres", "sqlite", "chrono", "uuid"], optional = true }

# HTTP and API clients
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"

# Streaming platforms
rdkafka = { version = "0.37", optional = true }
rumqttc = { version = "0.24", optional = true }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Data validation
validator = { version = "0.18", features = ["derive"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Hashing and checksums
blake3 = "1.5"
sha2 = "0.10"

# Compression
flate2 = "1.0"
zstd = "0.13"

# File format support
zip = "2.2"
csv = "1.3"

# Regular expressions
regex = "1.11"

# Utilities
itertools = "0.13"
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.14"
mockito = "1.6"
proptest = "1.6"

[features]
default = ["kafka", "mqtt", "diesel-support"]
kafka = ["rdkafka"]
mqtt = ["rumqttc"]
diesel-support = ["diesel"]
proj-transform = ["proj"]
full = ["kafka", "mqtt", "diesel-support", "proj-transform"]

[lib]
name = "meridian_data_pipeline"
path = "src/lib.rs"
