[package]
name = "meridian-db"
version = "0.1.0"
edition = "2021"
authors = ["Meridian Team"]
description = "PostGIS database integration for Meridian GIS Platform"
license = "MIT OR Apache-2.0"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "json"] }

# PostGIS
postgis = "0.9"
geo-types = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Meridian dependencies
meridian-core = { path = "../meridian-core" }

[dev-dependencies]
tokio-test = "0.4"
