[package]
name = "meridian-events"
version = "0.1.5"
edition = "2021"
authors = ["Meridian GIS Team"]
description = "Event sourcing and CQRS system for Meridian GIS Platform"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Hashing for deduplication
blake3 = "1.5"

# Concurrency primitives
parking_lot = "0.12"
dashmap = "6.1"

# Storage backend
rocksdb = { version = "0.22", optional = true }

# Schema evolution
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
criterion = "0.5"

[features]
default = ["rocksdb-backend"]
rocksdb-backend = ["rocksdb"]

