[package]
name = "meridian-map-engine"
version = "0.2.5"
edition = "2021"
authors = ["Meridian GIS Team"]
description = "High-performance WebGPU-based map rendering engine for Meridian GIS Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meridian-gis/meridian-map-engine"
keywords = ["gis", "map", "webgpu", "rendering", "visualization"]
categories = ["graphics", "rendering", "visualization", "wasm"]

[dependencies]
# WebGPU rendering
wgpu = { version = "0.19", features = ["webgl"] }
winit = { version = "0.29", features = ["serde"] }

# Math and linear algebra
glam = { version = "0.25", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Image processing
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# Async runtime
tokio = { version = "1.35", features = ["sync", "rt", "time"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
parking_lot = "0.12"
lru = "0.12"
smallvec = "1.11"
slotmap = "1.0"

# Color handling
palette = "0.7"

# Font rendering
fontdue = "0.8"
unicode-normalization = "0.1"

# Compression (for tiles)
flate2 = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "GpuCanvasContext",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"
approx = "0.5"

[features]
default = ["tile-cache", "gpu-picking", "text-rendering"]
tile-cache = []
gpu-picking = []
text-rendering = []
profiling = ["tracing/max_level_trace"]
debug-shaders = []

# Benchmarks - uncomment when benches/rendering.rs is created
# [[bench]]
# name = "rendering"
# harness = false

[lib]
crate-type = ["cdylib", "rlib"]
